# w_elliptic

./: .gitmodules  CMakeLists.txt
cmake_modules/: w_ellipticCompilerLinkerSettings.cmake
python/: CMakeLists.txt
tests/: CMakeLists.txt  w_elliptic.cpp
